Add CSS/Tab/data for Rei.

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -1,6 +1,6 @@
 * {
     margin: 0;
-    font-family: quicksand;
+    font-family: "Helvetica Neue";
     color: rgb(255, 255, 255);
     text-decoration: none;
     list-style: none;
