--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,7 +7,7 @@
 /**********************************/
 * {
   margin: 0;
-  font-family: quicksand;
+  font-family: "Helvetica Neue";
   color: white;
   text-decoration: none;
   list-style: none;
@@ -147,4 +147,45 @@ span {
   padding-right: 10px;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+.section {
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+.sheet {
+  background-color: #4b4a4a;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  margin-left: 20px;
+  margin-right: 20px;
+  border: 1px solid white;
+}
+
+.sheet-right__text-content {
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+.sheet-right__text-content p {
+  padding-bottom: 20px;
+  padding-top: 20px;
+  font-size: 17px;
+}
+
+.sheet-right__nav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  padding: 5px;
+  margin-bottom: 10px;
+  border-bottom: 1px solid white;
+}
+
+.sheet-right__nav li {
+  cursor: pointer;
 }
